# secureshield

./: CNAME  secureshield_demo_website (1).html  shopzone_complete.html
full_project/: .gitignore  README.md
full_project/demo_app/: README.md  app.py
full_project/demo_app/templates/: blocked.html  index.html  report.html
full_project/secureshield/: LICENSE  README.md  pyproject.toml  setup.py
full_project/secureshield/secureshield/: __init__.py  core.py  patterns.py  report.py
full_project/secureshield/tests/: test_secureshield.py
