[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secureshield"
version = "1.0.0"
description = "Lightweight real-time web attack detection library for Python web applications"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "SecureShield Contributors" }
]
keywords = [
    "security", "web", "sql-injection", "xss", "firewall",
    "waf", "attack-detection", "flask", "django", "fastapi"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flask>=2.0",
]

[project.urls]
Homepage = "https://github.com/yourname/secureshield"
"Bug Tracker" = "https://github.com/yourname/secureshield/issues"
Documentation = "https://github.com/yourname/secureshield#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["secureshield*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
